--- a/css/styles.css
+++ b/css/styles.css
@@ -60,17 +60,21 @@ border-style: solid;
 	margin-top: 3em;
 }
 
-nav
-{
-	
-	
+
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: black;
 }
 
 
+a:hover {
+    color: black;
+}
 
 
-
-a:link
-{
-	color: black;
+a:active {
+    color: black;
 }
