--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ position: absolute;
   float: right;
   margin-top: 8em;
   margin-right: -9em;
+	position: absolute;
 }
 
 #SocmedB
@@ -33,6 +34,7 @@ position: absolute;
 	margin-top: 4em;
 	float: right;
 	margin-right: 2em;
+	position: absoloute;
 }
 
 
