--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ position: absolute;
 {
   float: right;
   margin-top: 8em;
-  margin-right: -9em;
+  margin-left: 85em;
 	position: absolute;
 }
 
@@ -33,8 +33,8 @@ position: absolute;
 {
 	margin-top: 4em;
 	float: right;
-	margin-right: 2em;
-	position: absoloute;
+	margin-left: 85em;
+	position: absolute;
 }
 
 
@@ -81,4 +81,42 @@ a:hover {
 
 a:active {
     color: black;
+}
+
+.aboutpic
+{
+	padding: 5px;
+	background-color: white;
+	border-style: solid;
+	border-width: 5px
+	
+}
+
+.abpp
+{
+	margin-top: 20em;
+	margin-left: 21em;
+	position: absolute;
+	
+}
+
+#abouttext
+{
+	background-color: white;
+	border-style: solid;
+	border-width: 5px;
+	margin-left: 40em;
+	margin-top: 20em;
+	position: absolute;
+	padding-bottom: 11em;
+	margin-right: 2em;
+	;
+	
+}
+
+#Aboutpp
+{
+	position: absolute;
+	margin-top: 40em;
+	margin-left: 2em;
 }
