--- a/css/styles.css
+++ b/css/styles.css
@@ -100,17 +100,21 @@ a:active {
 	
 }
 
-#abouttext
+.textbox
 {
 	background-color: white;
 	border-style: solid;
 	border-width: 5px;
 	margin-left: 40em;
+	
+}
+
+.atext
+{
 	margin-top: 20em;
 	position: absolute;
 	padding-bottom: 11em;
 	margin-right: 2em;
-	;
 	
 }
 
@@ -120,3 +124,25 @@ a:active {
 	margin-top: 40em;
 	margin-left: 2em;
 }
+
+.ttext
+{
+	position: absolute;
+	margin-top:15em;
+	margin-left: 30em;
+	padding: 0.5em;
+}
+
+.tvideo
+{
+	position: absolute;
+	margin-top: 20em;
+	margin-left: 10em;
+	
+}
+
+.tmap
+{
+	position: absolute;
+	margin-top: 20em;
+	margin-left: 50em;
